Slightly tweaked new feature elements for Ruby Ore, Topaz Ore and Flint Block generation

--- a/src/main/resources/data/better_tools/forge/biome_modifier/topaz_ore_feature_biome_modifier.json
+++ b/src/main/resources/data/better_tools/forge/biome_modifier/topaz_ore_feature_biome_modifier.json
@@ -1,6 +1,6 @@
 {
   "type": "forge:add_features",
-  "biomes": "#is_overworld",
+  "biomes": "#is_desert",
   "features": "better_tools:topaz_ore_feature",
   "step": "underground_ores"
 }
