Created new oak treehouse structure element

--- a/src/main/resources/data/better_tools/forge/biome_modifier/oak_treehouse_feature_biome_modifier.json
+++ b/src/main/resources/data/better_tools/forge/biome_modifier/oak_treehouse_feature_biome_modifier.json
@@ -1,10 +1,6 @@
 {
   "type": "forge:add_features",
-  "biomes": [
-    "forest",
-    "plains",
-    "flower_forest"
-  ],
+  "biomes": "beach",
   "features": "better_tools:oak_treehouse_feature",
   "step": "surface_structures"
 }
