Sorted out giant mushroom structures

--- a/src/main/resources/data/better_tools/forge/biome_modifier/giant_blue_mushroom_feature_biome_modifier.json
+++ b/src/main/resources/data/better_tools/forge/biome_modifier/giant_blue_mushroom_feature_biome_modifier.json
@@ -1,9 +1,6 @@
 {
   "type": "forge:add_features",
-  "biomes": [
-    "mushroom_fields",
-    "plains"
-  ],
+  "biomes": "mushroom_fields",
   "features": "better_tools:giant_blue_mushroom_feature",
   "step": "surface_structures"
 }
