Updated knives and armor tags

--- a/src/main/resources/data/better_tools/forge/biome_modifier/blue_mushroom_biome_modifier.json
+++ b/src/main/resources/data/better_tools/forge/biome_modifier/blue_mushroom_biome_modifier.json
@@ -1,9 +1,6 @@
 {
   "type": "forge:add_features",
-  "biomes": [
-    "mushroom_fields",
-    "plains"
-  ],
+  "biomes": "mushroom_fields",
   "features": "better_tools:blue_mushroom",
   "step": "vegetal_decoration"
 }
