--- a/elements/IceStaffProjectile.mod.json
+++ b/elements/IceStaffProjectile.mod.json
@@ -13,8 +13,8 @@
     "power": 1.0,
     "damage": 1.0,
     "knockback": 0,
-    "entityModel": "Default",
-    "customModelTexture": "",
+    "entityModel": "Modelice_staff_projectile",
+    "customModelTexture": "ice_effect.png",
     "onHitsEntity": {
       "name": "IceStaffProcedure2"
     }
