Added more SFX and particles to staffs

--- a/elements/FireStaffProjectile.mod.json
+++ b/elements/FireStaffProjectile.mod.json
@@ -11,12 +11,18 @@
     },
     "igniteFire": false,
     "power": 1.0,
-    "damage": 1.0,
+    "damage": 0.19999999999999998,
     "knockback": 0,
     "entityModel": "Modelfire_staff_projectile",
     "customModelTexture": "flame_effect.png",
+    "onHitsBlock": {
+      "name": "FireStaffProjectileMisses"
+    },
     "onHitsEntity": {
       "name": "FireStaffProcedure"
+    },
+    "onFlyingTick": {
+      "name": "FireStaffProjectileParticles"
     }
   }
 }
