--- a/elements/IceStaffProjectile.mod.json
+++ b/elements/IceStaffProjectile.mod.json
@@ -11,12 +11,18 @@
     },
     "igniteFire": false,
     "power": 1.0,
-    "damage": 1.0,
+    "damage": 0.2,
     "knockback": 0,
     "entityModel": "Modelice_staff_projectile",
     "customModelTexture": "ice_effect.png",
+    "onHitsBlock": {
+      "name": "IceStaffProjectileMisses"
+    },
     "onHitsEntity": {
       "name": "IceStaffProcedure2"
+    },
+    "onFlyingTick": {
+      "name": "IceStaffProjectileParticles"
     }
   }
 }
