--- a/elements/ElectricStaffProjectile.mod.json
+++ b/elements/ElectricStaffProjectile.mod.json
@@ -11,12 +11,18 @@
     },
     "igniteFire": false,
     "power": 1.0,
-    "damage": 1.0,
+    "damage": 0.2,
     "knockback": 0,
     "entityModel": "Modellightning_staff_projectile",
     "customModelTexture": "zap_effect.png",
+    "onHitsBlock": {
+      "name": "LightningStaffProjectileMisses"
+    },
     "onHitsEntity": {
       "name": "ElectricStaffProcedure"
+    },
+    "onFlyingTick": {
+      "name": "LightningStaffProjectileParticles"
     }
   }
 }
