Fixed localization keys for projectiles

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -20,6 +20,18 @@ description="Adds new ores, tools, armor, music discs, enchantments, food, potio
     side="BOTH"
 
 
+[[dependencies.better_tools]]
+    modId="curios"
+    mandatory=true
+    versionRange="[0,)"
+    ordering="NONE"
+    side="BOTH"
+[[dependencies.better_tools]]
+    modId="jei"
+    mandatory=true
+    versionRange="[0,)"
+    ordering="NONE"
+    side="BOTH"
 
 [[dependencies.better_tools]]
     modId="curios_api"
