Updated tooltips for crystallite sapphire items

--- a/elements/CrystalliteArmorSapphire.mod.json
+++ b/elements/CrystalliteArmorSapphire.mod.json
@@ -20,22 +20,38 @@
     "bootsName": "Crystallite Boots",
     "helmetSpecialInformation": {
       "fixedValue": [
-        "§bFreezing - Can freeze attackers"
+        "§7Upgrade: §bSapphire",
+        "§7Ability:",
+        "§bFreezing - Can freeze attackers",
+        "§7Full-set bonus:",
+        "§bFurther increases chances of freeze"
       ]
     },
     "bodySpecialInformation": {
       "fixedValue": [
-        "§bFreezing - Can freeze attackers"
+        "§7Upgrade: §bSapphire",
+        "§7Ability:",
+        "§bFreezing - Can freeze attackers",
+        "§7Full-set bonus:",
+        "§bFurther increases chances of freeze"
       ]
     },
     "leggingsSpecialInformation": {
       "fixedValue": [
-        "§bFreezing - Can freeze attackers"
+        "§7Upgrade: §bSapphire",
+        "§7Ability:",
+        "§bFreezing - Can freeze attackers",
+        "§7Full-set bonus:",
+        "§bFurther increases chances of freeze"
       ]
     },
     "bootsSpecialInformation": {
       "fixedValue": [
-        "§bFreezing - Can freeze attackers"
+        "§7Upgrade: §bSapphire",
+        "§7Ability:",
+        "§bFreezing - Can freeze attackers",
+        "§7Full-set bonus:",
+        "§bFurther increases chances of freeze"
       ]
     },
     "helmetModelName": "Default",
@@ -66,6 +82,18 @@
     "bodyImmuneToFire": true,
     "leggingsImmuneToFire": true,
     "bootsImmuneToFire": true,
+    "helmetPiglinNeutral": {
+      "fixedValue": false
+    },
+    "bodyPiglinNeutral": {
+      "fixedValue": false
+    },
+    "leggingsPiglinNeutral": {
+      "fixedValue": false
+    },
+    "bootsPiglinNeutral": {
+      "fixedValue": false
+    },
     "maxDamage": 35,
     "damageValueHelmet": 4,
     "damageValueBody": 8,
