--- a/elements/CrystalliteHoeSapphire.mod.json
+++ b/elements/CrystalliteHoeSapphire.mod.json
@@ -11,6 +11,8 @@
     "name": "Crystallite Hoe",
     "specialInformation": {
       "fixedValue": [
+        "§7Upgrade: §bSapphire",
+        "§7Ability:",
         "§bIcy Coating - Has Silk Touch"
       ]
     },
@@ -24,6 +26,9 @@
     "damageVsEntity": 2.5,
     "usageCount": 1800,
     "blocksAffected": [],
+    "glowCondition": {
+      "fixedValue": false
+    },
     "repairItems": [
       {
         "value": "CUSTOM:CrystalliteShards"
