--- a/elements/CrystalliteSwordSapphire.mod.json
+++ b/elements/CrystalliteSwordSapphire.mod.json
@@ -11,6 +11,8 @@
     "name": "Crystallite Sword",
     "specialInformation": {
       "fixedValue": [
+        "§7Upgrade: §bSapphire",
+        "§7Ability:",
         "§bFreezing - Can freeze opponents"
       ]
     },
@@ -24,6 +26,9 @@
     "damageVsEntity": 7.0,
     "usageCount": 1800,
     "blocksAffected": [],
+    "glowCondition": {
+      "fixedValue": false
+    },
     "repairItems": [
       {
         "value": "CUSTOM:CrystaliteGem"
