Re-branded the update to VERSION 11.0!!!!

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,13 +4,13 @@ license="Academic Free License v3.0"
 
 [[mods]]
 modId="better_tools"
-version="10.4"
+version="11.0"
 displayName="Better Tools and Armor"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/better-tools-and-armor"
 logoFile="logo.png"
 credits="Created using mod maker MCreator - https://mcreator.net/about"
 authors="BlackCatGamer64, MCreator"
-description="Adds new ores, tools, armor, music discs, enchantments, food, potion effects and much more!"
+description="Adds many new ores and resources which improve the progression and exploration in Minecraft. Also adds many misc. features"
 
 [[dependencies.better_tools]]
     modId="minecraft"
