Updated JEI Info of Elemental Crystals

--- a/elements/SapphireCrystalliteInfo.mod.json
+++ b/elements/SapphireCrystalliteInfo.mod.json
@@ -41,7 +41,8 @@
       }
     ],
     "information": [
-      "§lCrystallite Upgrades: §bSapphire§r",
+      "§lCrystallite Upgrades: ",
+      "§bSapphire§r",
       "",
       "Theme:",
       "Ice"
