Removed all recipe unlocks, since JEI is now a required dependency

--- a/elements/SapphireGemAdv.mod.json
+++ b/elements/SapphireGemAdv.mod.json
@@ -13,20 +13,7 @@
     "announceToChat": true,
     "hideIfNotCompleted": false,
     "rewardLoot": [],
-    "rewardRecipes": [
-      "SapphireBlockRecipe",
-      "SapphireBlockReverseRecipe",
-      "SapphireSwordRecipe",
-      "SapphirePickaxeRecipe",
-      "SapphireAxeRecipe",
-      "SapphireShovelRecipe",
-      "SapphireHoeRecipe",
-      "SapphireDaggerRecipe",
-      "SapphireHelmetRecipe",
-      "SapphireChestplateRecipe",
-      "SapphireLegsRecipe",
-      "SapphireBootsRecipe"
-    ],
+    "rewardRecipes": [],
     "rewardFunction": "No function",
     "rewardXP": 5,
     "achievementType": "task",
